2010-05-27  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed issue #7763: Suggest functionality does not take language into account (credits Mario Rimann)

2010-05-26  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed issue #7815: Code injection possible in Search field
	* Improved security by consistently using htmlentities() with ENT_QUOTES option

2010-05-07  Ingo Renner  <ingo.renner@dkd.de>

	* Changed all places where Solr connections were created to use the new connection manager. The connection manager automatically detects all configured connections when clearing the configuration cache (green flash)
	* Added a status report to check whether the current schema is installed
	* Added an index report
	* Added auto suggest

2010-04-23  Ingo Renner  <ingo.renner@dkd.de>

	* !!! Changed some fields and added a lot of dynamic fields in schema.xml, requires reindexing

2010-04-20  Ingo Renner  <ingo.renner@dkd.de>

	* !!! Changed the format of the page document IDs, requires reindexing

2010-04-19  Ingo Renner  <ingo.renner@dkd.de>

	* Changed component resolving in the results plugin to process the results list as the last component so that one can build result lists as table where headers can be used to sort the table

2010-04-15  Ingo Renner  <ingo.renner@dkd.de>

	* !!! Added cHash to page document id (breaking change, needs reindexing!), credits Timo Schmidt

2010-04-12  Ingo Renner  <ingo.renner@dkd.de>

	* Added support for cObjects in additional field definitions

2010-03-15  Ingo Renner  <ingo.renner@dkd.de>

	* !!! Changed the way the site hash is calculated, requires reindexing
	* Changed document ID generation to provide page IDs to site hash generation

2010-03-12  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed bug tx_solr_Query::addReturnField does not remove *, credits Timo Schmidt

2010-03-08  Ingo Renner  <ingo.renner@dkd.de>

	* Changed the constructor of tx_solr_SolrService to accept connection parameters instead of always getting them from TSFE