@@ -10,7 +10,7 @@
 -->
 
 <!-- the name property must be updated when changing the schema, also need to update the schema status report -->
-<schema name="tx_solr-1-4-0--20100420" version="1.1">
+<schema name="tx_solr-1-4-0--20100531" version="1.1">
 	<!--
 		attribute "name" is the name of this schema and is only used for
 		display purposes. Applications should change this to reflect the
@@ -167,7 +167,7 @@
 			<analyzer type="index">
 				<tokenizer class="solr.WhitespaceTokenizerFactory"/>
 
-				<filter class="solr.WordDelimiterFilterFactory" generateWordParts="1" generateNumberParts="1" catenateWords="1" catenateNumbers="1" catenateAll="0" splitOnCaseChange="1"/>
+				<filter class="solr.WordDelimiterFilterFactory" generateWordParts="1" generateNumberParts="1" catenateWords="1" catenateNumbers="1" catenateAll="0" splitOnCaseChange="1" preserveOriginal="1"/>
 				<!-- Case insensitive stop word removal.
 					add enablePositionIncrements=true in both the index and query
 					analyzers to leave a 'gap' for more accurate phrase queries.
@@ -185,7 +185,7 @@
 			<analyzer type="query">
 				<tokenizer class="solr.WhitespaceTokenizerFactory"/>
 
-				<filter class="solr.WordDelimiterFilterFactory" generateWordParts="1" generateNumberParts="1" catenateWords="0" catenateNumbers="0" catenateAll="0" splitOnCaseChange="1"/>
+				<filter class="solr.WordDelimiterFilterFactory" generateWordParts="1" generateNumberParts="1" catenateWords="0" catenateNumbers="0" catenateAll="0" splitOnCaseChange="1" preserveOriginal="1"/>
 				<!--
 				best practice (currently) for synonyms is to add them by expansions during index time
 	 			<filter class="solr.SynonymFilterFactory" synonyms="synonyms.txt" ignoreCase="true" expand="true"/>
@@ -210,7 +210,7 @@
 
 				<filter class="solr.SynonymFilterFactory" synonyms="synonyms.txt" ignoreCase="true" expand="false"/>
 				<filter class="solr.StopFilterFactory" ignoreCase="true" words="stopwords.txt"/>
-				<filter class="solr.WordDelimiterFilterFactory" generateWordParts="0" generateNumberParts="0" catenateWords="1" catenateNumbers="1" catenateAll="0"/>
+				<filter class="solr.WordDelimiterFilterFactory" generateWordParts="0" generateNumberParts="0" catenateWords="1" catenateNumbers="1" catenateAll="0" preserveOriginal="1"/>
 				<filter class="solr.LowerCaseFilterFactory"/>
 				<filter class="solr.SnowballPorterFilterFactory" language="English" protected="protwords.txt"/>
 				<filter class="solr.RemoveDuplicatesTokenFilterFactory"/>
