@@ -1,3 +1,7 @@
+2010-05-31  Ingo Renner  <ingo.renner@dkd.de>
+
+	* Changed the default schema.xml, adding the preserveOriginal="1" option to all solr.WordDelimiterFilterFactory filters
+
 2010-05-27  Ingo Renner  <ingo.renner@dkd.de>
 
 	* Fixed issue #7763: Suggest functionality does not take language into account (credits Mario Rimann)
